完善添加登录界面设计

--- a/src/element-variables.scss
+++ b/src/element-variables.scss
@@ -4,7 +4,7 @@ found in element-ui/packages/theme-chalk/src/common/var.scss.
 For example, to overwrite the theme color:
 */
 
-$--color-primary: skyblue;
+$--color-primary: #0790df;
 
 /* icon font path, required */
 
