--- a/src/element-variables.scss
+++ b/src/element-variables.scss
@@ -5,6 +5,8 @@ For example, to overwrite the theme color:
 */
 
 $--color-primary: #0790df;
+$--table-border-color: #d7e4f2;
+$--table-header-background-color: #d7e4f2;
 
 /* icon font path, required */
 
